@@ -5,6 +5,10 @@
       blow away anything not in the MANIFEST to the FAQ.
     * 6.30_01 broke overrides of PM.  MakeMaker would add to a user
       suplied PM rather than simply accepting it.
+    * Document INSTALL_BASE.
+    * Added "How do I install a module into my home directory?" to the FAQ
+    * Added "How do I get MakeMaker and Module::Build to install to the
+      same place?"
 
 6.30_03  Fri Sep  1 17:03:11 EDT 2006
     - Minor fix to Command.t for Win32.
